--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,10 @@ a:hover {
   text-decoration: underline;
 }
 
+.link {
+  
+}
+
 @media only screen and (max-width: 1042px) {
   .wrapper {
     width: 80%;
